[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robodriver_robot_realman_follower_dora"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Runtian Xu", email = "xuruntian03@163.com"},
]
keywords = ["robotics", "lerobot", "realman"]
dependencies = [
    "dora-rs-cli (>=0.3.11,<0.4.0)",
    "logging_mp",
]

[tool.setuptools.packages.find]
include = [
    "robodriver_robot_realman_follower_dora",
    "lerobot_robot_realman_follower_dora"
]